# LogginPyPi

./: README.md  pyproject.toml
src/LogginPyPi_Zerbaib/: main.py
src/LogginPyPi_Zerbaib/data/: var.py
